tests/snapshots/cli__tests__german-005_german.snap
---
source: core/tests/cli.rs
description: "Der Massstab\n"
expression: "&output"
---
Der Maßstab

