tests/snapshots/cli__tests__german-006_german.snap
---
source: core/tests/cli.rs
description: "Sehr droege, dieser\nMassstab!"
expression: "&output"
---
Sehr dröge, dieser
Maßstab!
