tests/snapshots/cli__tests__go-search-files-macos.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args: args.into(), stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--stdin-detection"
  - force-unreadable
  - "--threads"
  - "1"
  - "--sorted"
  - "--go"
  - comments
  - "[fF]izz"
stdin: ~
stdout:
  - "tests/langs/go/fizzbuzz.go:5:3-7:// fizzBuzz prints the numbers from 1 to a specified limit.\n"
  - "tests/langs/go/fizzbuzz.go:6:34-38:// For multiples of 3, it prints \"Fizz\" instead of the number,\n"
  - "tests/langs/go/fizzbuzz.go:8:14-18:// it prints \"FizzBuzz\".\n"
  - "tests/langs/go/fizzbuzz.go:25:12-16:\t// Run the FizzBuzz function for numbers from 1 to 100\n"
exit_code: 0
