tests/snapshots/cli__tests__go-search-files.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: stdin.map(|s|\n            s.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec()),\n    stdout: stdout.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    exit_code,\n}"
info:
  stderr: ""
---
args:
  - "--go"
  - comments
  - "[fF]izz"
stdin: ~
stdout:
  - "tests/langs/go/other/fizzbuzz.go\n"
  - "5:// fizzBuzz prints the numbers from 1 to a specified limit.\n"
  - "6:// For multiples of 3, it prints \"Fizz\" instead of the number,\n"
  - "8:// it prints \"FizzBuzz\".\n"
  - "25:\t// Run the FizzBuzz function for numbers from 1 to 100\n"
  - "\n"
exit_code: 0
