tests/snapshots/cli__tests__language-scoping-and-files-inplace-python-dry-run-linux.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--sorted"
  - "--python"
  - function-names
  - "--glob"
  - subdir/**/*.py
  - foo
  - baz
stdin: ~
stdout:
  - "subdir/2.py:\n"
  - "- def foo(bar: int) -> int:\n"
  - "+ def baz(bar: int) -> int:\n"
  - "subdir/subdir/3.py:\n"
  - "- def foo(bar: int) -> int:\n"
  - "+ def baz(bar: int) -> int:\n"
exit_code: 0
