tests/snapshots/cli__tests__language-scoping-and-files-inplace-python-windows.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    exit_code,\n}"
info:
  stderr: ""
---
args:
  - "--sorted"
  - "--python"
  - function-names
  - "--glob"
  - subdir/**/*.py
  - foo
  - baz
stdin: ~
stdout:
  - "subdir\\2.py\n"
  - "subdir\\subdir\\3.py\n"
exit_code: 0
